# python-aws-ssm

./: .travis.yml  Makefile  README.md  catalog-info.yaml  codecov.yml  pyproject.toml
.github/workflows/: ci.yml  python.yml
aws_ssm/: parameters.py
python_aws_ssm/: cli.py  parameters.py
tests/: test_aws_ssm.py  test_python_aws_ssm.py
tests/fixtures/: file.yaml
