[tool.poetry]
name = "python-aws-ssm"
version = "0.1.2"
description = "Python package that interfaces with AWS System Manager"
authors = ["Luca Valentini <luca@paddle.com>", "Maarten Jacobs <maarten@paddle.com>"]
# New attributes
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/PaddleHQ/python-aws-ssm"
repository = "https://github.com/PaddleHQ/python-aws-ssm"
keywords = ["python", "aws", "ssm"]
include = [
    "LICENSE",
]
[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.9"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
mypy = "^0.720.0"
isort = "^4.3"
black = "==19.3b0"
flake8 = "^3.7"
pytest-cov = "^2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
