[tool.poetry]
name = "python-aws-ssm"
version = "1.0.0"
description = "Python package that interfaces with AWS System Manager"
authors = ["Luca Valentini <luca@paddle.com>", "Maarten Jacobs <maarten@paddle.com>"]
# New attributes
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/PaddleHQ/python-aws-ssm"
repository = "https://github.com/PaddleHQ/python-aws-ssm"
keywords = ["python", "aws", "ssm"]
include = [
    "LICENSE",
]
[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.9"
PyYAML = "^5"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
mypy = "^1"
isort = "^5"
black = "^23"
flake8 = "^5"
pytest-cov = "^4.0"
codecov = "^2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
aws-ssm-param = 'python_aws_ssm.cli:cli'