[tool.poetry]
name = "python-aws-ssm"
version = "1.0.0"
description = "Python package that interfaces with AWS System Manager"
authors = ["Luca Valentini <luca@paddle.com>", "Maarten Jacobs <maarten@paddle.com>"]
# New attributes
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/PaddleHQ/python-aws-ssm"
repository = "https://github.com/PaddleHQ/python-aws-ssm"
keywords = ["python", "aws", "ssm"]
include = [
    "LICENSE",
]
[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.9"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
mypy = "^1.7"
isort = "^5.12"
black = "^23.11.0"
flake8 = "^6.1"
pytest-cov = "^4.0"
codecov = "^2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
